--- a/Styles/style.css
+++ b/Styles/style.css
@@ -37,20 +37,25 @@ a:visited {
 .icon {
   height: 2.2rem;
   width: 2.2rem;
+  stroke-width: 0.01;
 }
 
 .icon--header {
   height: 4rem !important;
   width: 4rem !important;
 }
+.--card-icon {
+  height: 1.8rem !important;
+  width: 1.8rem !important;
+}
 
 .app-container {
   width: 1200px;
   height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 0.8fr 3fr;
 
-  background-color: thistle;
+  background-color: var(--bgc);
 }
 
 .side-menu {
@@ -192,4 +197,51 @@ a:visited {
   padding: 0.8rem 1.6rem;
   border-radius: 16px;
   font-weight: 500;
+}
+
+/* *********************** */
+/* MAIN PROJECT WINDOW */
+/* *********************** */
+
+.dashboard-items {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  padding: 3rem 1.8rem 1.8rem 1.8rem;
+}
+
+.dash-title {
+  margin-bottom: 1.2rem;
+}
+
+.projects-grid {
+  display: grid;
+  grid-template-columns: repeat(2, 30rem);
+  gap: 2rem 2rem;
+}
+
+.card {
+  background-color: var(--card-bg);
+  display: grid;
+  grid-template-rows: repeat(3, auto);
+  width: 30rem;
+  padding: 2rem;
+  border-radius: 4px;
+  border-left: 6px solid var(--accent);
+}
+.card-title {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 0.4rem;
+}
+.card-description {
+  height: 8rem;
+  font-size: 1.2rem;
+}
+.card-actions {
+  margin-top: auto;
+  justify-self: end;
+
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  column-gap: 1.6rem;
 }
