--- a/Styles/style.css
+++ b/Styles/style.css
@@ -34,6 +34,10 @@ a:visited {
   height: 2rem !important;
 }
 
+.--grey-text {
+  color: var(--grey-text);
+}
+
 .icon {
   height: 2.2rem;
   width: 2.2rem;
@@ -231,7 +235,7 @@ a:visited {
 .card-title {
   font-size: 1.2rem;
   font-weight: 600;
-  margin-bottom: 0.4rem;
+  margin-bottom: 0.6rem;
 }
 .card-description {
   height: 8rem;
@@ -244,4 +248,69 @@ a:visited {
   display: grid;
   grid-template-columns: repeat(3, auto);
   column-gap: 1.6rem;
+}
+
+/* ************************* */
+/* RIGHT PANE */
+/* ************************* */
+.articles {
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: 2rem;
+}
+
+.article-list {
+  list-style-type: none;
+  background-color: var(--card-bg);
+  padding: 2.2rem;
+  border-radius: 4px;
+
+  display: grid;
+  grid-template-columns: 1fr;
+  row-gap: 1.6rem;
+}
+
+.anc-title {
+  color: var(--dark-text);
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 0.2rem;
+}
+
+.anc-desc {
+  font-size: 1rem;
+  /* display: inline-block; */
+}
+.anc-desc::after {
+  content: "...";
+}
+
+.line-break li::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: var(--bgc);
+  display: block;
+  margin-top: 1.6rem;
+}
+.line-break li:last-child::after {
+  content: "";
+  display: none;
+}
+
+/* TRENDING SECTION */
+.trending-profile {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  align-items: center;
+  column-gap: 1.2rem;
+}
+
+.trending-ID {
+  color: var(--dark-text);
+  font-weight: 600;
+  margin-bottom: 0.4rem;
+}
+.trending-desc {
+  font-weight: 500;
 }
