--- a/Styles/style.css
+++ b/Styles/style.css
@@ -8,7 +8,7 @@
 
 html {
   font-size: 62.5%;
-  font-family: sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 body {
   display: flex;
@@ -70,7 +70,7 @@ a:visited {
   padding: 2rem;
   background-color: var(--primary);
   color: var(--light-text);
-  font-size: 1.8rem;
+  font-size: 1.6rem;
 
   display: grid;
   grid-template-columns: 1fr;
@@ -97,14 +97,14 @@ a:visited {
   list-style-type: none;
   grid-template-columns: auto;
   grid-template-rows: repeat(6, auto);
-  row-gap: 2.8rem;
+  row-gap: 2.2rem;
   justify-content: start;
 }
 
 .menu-link {
   display: grid;
   grid-template-columns: auto auto;
-  column-gap: 2.8rem;
+  column-gap: 2rem;
   justify-content: start;
   align-items: center;
 }
@@ -213,16 +213,17 @@ a:visited {
 .dashboard-items {
   display: grid;
   grid-template-columns: 3fr 1fr;
-  padding: 3rem 1.8rem 1.8rem 1.8rem;
+  padding: 3rem 2.4rem 1.8rem 1.8rem;
 }
 
 .dash-title {
   margin-bottom: 1.2rem;
+  font-size: 1.4rem;
 }
 
 .projects-grid {
   display: grid;
-  grid-template-columns: repeat(2, 30rem);
+  grid-template-columns: repeat(2, 32rem);
   gap: 2rem 2rem;
 }
 
@@ -230,13 +231,13 @@ a:visited {
   background-color: var(--card-bg);
   display: grid;
   grid-template-rows: repeat(3, auto);
-  width: 30rem;
+  /* width: 30rem; */
   padding: 2rem;
   border-radius: 4px;
   border-left: 6px solid var(--accent);
 }
 .card-title {
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   font-weight: 600;
   margin-bottom: 0.6rem;
 }
