--- a/Styles/style.css
+++ b/Styles/style.css
@@ -39,7 +39,7 @@ a:visited {
 }
 
 .drop-shadow {
-  box-shadow: 1px 3px 4px 1px rgba(0, 0, 0, 0.1);
+  box-shadow: 2px 3px 4px 1px rgba(0, 0, 0, 0.2);
 }
 
 .icon {
@@ -70,7 +70,7 @@ a:visited {
   padding: 2rem;
   background-color: var(--primary);
   color: var(--light-text);
-  font-size: 1.6rem;
+  font-size: 1.8rem;
 
   display: grid;
   grid-template-columns: 1fr;
@@ -112,6 +112,10 @@ a:visited {
 /* *********************** */
 /* TOP HEADER */
 /* *********************** */
+.main-window {
+  overflow: hidden;
+}
+
 .main-top-header {
   background-color: var(--card-bg);
   display: grid;
@@ -163,7 +167,7 @@ a:visited {
 
 .profile-name {
   font-size: 1.6rem;
-  font-weight: 600;
+  font-weight: 700;
 }
 
 .welcome {
@@ -181,7 +185,7 @@ a:visited {
 
 .greeting {
   font-size: 1.2rem;
-  font-weight: 600;
+  font-weight: 700;
 }
 .full-Id {
   font-size: 1.8rem;
@@ -212,19 +216,20 @@ a:visited {
 
 .dashboard-items {
   display: grid;
-  grid-template-columns: 3fr 1fr;
-  padding: 3rem 2.4rem 1.8rem 1.8rem;
+  grid-template-columns: auto 1fr;
+  padding: 3rem 2.6rem 3rem 1.8rem;
+  column-gap: 3rem;
 }
 
 .dash-title {
   margin-bottom: 1.2rem;
-  font-size: 1.4rem;
+  font-size: 1.6rem;
 }
 
 .projects-grid {
   display: grid;
-  grid-template-columns: repeat(2, 32rem);
-  gap: 2rem 2rem;
+  grid-template-columns: repeat(2, 30rem);
+  gap: 3rem 3rem;
 }
 
 .card {
@@ -233,17 +238,17 @@ a:visited {
   grid-template-rows: repeat(3, auto);
   /* width: 30rem; */
   padding: 2rem;
-  border-radius: 4px;
+  border-radius: 6px;
   border-left: 6px solid var(--accent);
 }
 .card-title {
-  font-size: 1.4rem;
-  font-weight: 600;
+  font-size: 1.6rem;
+  font-weight: 700;
   margin-bottom: 0.6rem;
 }
 .card-description {
   height: 8rem;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
 }
 .card-actions {
   margin-top: auto;
@@ -267,7 +272,7 @@ a:visited {
   list-style-type: none;
   background-color: var(--card-bg);
   padding: 2.2rem;
-  border-radius: 4px;
+  border-radius: 6px;
 
   display: grid;
   grid-template-columns: 1fr;
@@ -276,13 +281,13 @@ a:visited {
 
 .anc-title {
   color: var(--dark-text);
-  font-size: 1.2rem;
-  font-weight: 600;
+  font-size: 1.4rem;
+  font-weight: 700;
   margin-bottom: 0.2rem;
 }
 
 .anc-desc {
-  font-size: 1rem;
+  font-size: 1.2rem;
   /* display: inline-block; */
 }
 .anc-desc::after {
@@ -312,9 +317,11 @@ a:visited {
 
 .trending-ID {
   color: var(--dark-text);
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: 0.4rem;
+  font-size: 1.2rem;
 }
 .trending-desc {
   font-weight: 500;
+  font-size: 1.2rem;
 }
