--- a/Styles/style.css
+++ b/Styles/style.css
@@ -67,7 +67,6 @@ a:visited {
 
 .side-menu {
   width: 100%;
-  padding: 2rem;
   background-color: var(--primary);
   color: var(--light-text);
   font-size: 1.8rem;
@@ -78,6 +77,8 @@ a:visited {
   row-gap: 8rem;
   align-content: start;
   justify-content: start;
+
+  overflow: hidden;
 }
 
 .menu-header {
@@ -86,27 +87,33 @@ a:visited {
   grid-template-columns: auto auto;
   column-gap: 1.2rem;
   align-items: center;
+  padding: 2rem;
 }
 .header-text {
   font-size: 2.36rem;
 }
 .menu-nav ul,
 .menu-tools ul {
-  justify-self: start;
   display: grid;
   list-style-type: none;
-  grid-template-columns: auto;
-  grid-template-rows: repeat(6, auto);
-  row-gap: 2.2rem;
+  grid-template-columns: 1fr;
   justify-content: start;
 }
 
 .menu-link {
+  padding: 1.2rem 2.4rem;
   display: grid;
   grid-template-columns: auto auto;
   column-gap: 2rem;
   justify-content: start;
   align-items: center;
+
+  transition: background-color 0.2s ease, box-shadow 0.2s ease;
+}
+
+.menu-link:hover {
+  background-color: var(--shade-1);
+  box-shadow: 0 0 2px 0 var(--icon-clr) inset;
 }
 
 /* *********************** */
@@ -141,6 +148,7 @@ a:visited {
   border: none;
   background-color: var(--bgc);
   padding: 0.5rem;
+  padding-left: 1rem;
   border-radius: 9px;
   font-size: 1.8rem;
 }
